Update README to current design (free congress source + Gemini, logging, knobs)
Refresh outdated sections: intro and 'How it works' described the original
Finnhub+Anthropic flow; now reflect the pluggable default (free congress.kadoa.com
source + Gemini narrator). Replace the stale ASCII diagram with the rendered PNGs.
Add Configuration knobs and Observability/logging sections, the ?refresh=true
digest call, JDK-25 dev-mode flag note, Testcontainers 1.21.4 / DOCKER_HOST note,
and fix the member example to a real name.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>